# HEDB

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.mk
docs/: anonymized-replay.md  anonymized_log.md  artifact.md  build-from-scratch.md  caveats.md  install.md  native-setup.md  porting.md  type-1.md  vm-setup-aarch64.md  vm-setup-x86_64.md
src/: CMakeLists.txt
src/cmake/: FindPostgreSQL.cmake  FindSGX.cmake
src/driver/arm-pmu-driver/: pmuctl.h
src/driver/ivshmem-driver/: Makefile  README.md  uio-5-4.c  uio-ivshmem.c
src/enclave/: desenitizer.cpp  enc_float_ops.c  enc_int_ops.c  enc_ops.c  enc_text_ops.c  enc_timestamp_ops.c
src/enclave/include/: enc_float_ops.h  enc_int_ops.h  enc_ops.h  enc_text_ops.h  enc_timestamp_ops.h  kv.h  plain_text_ops.h  plain_timestamp_ops.h
src/enclave/klee_wrapper/: .desenitizer.c  masker.c  prefix_udf.c  wrapper.c
src/enclave/kv/: kv.cpp
src/enclave/plain_ops/: plain_float_ops.c  plain_int_ops.c  plain_text_ops.c  plain_timestamp_ops.c
src/enclave/sgx/: enclave.cpp  enclave.edl  enclave.hpp  enclave_t.h
src/enclave/simulate/: crypto.c  crypto.h  sim.cpp
src/enclave/trustzone/: Makefile  crypto.c  crypto.h  ops_ta.c  ops_ta.h  sub.mk  user_ta_header_defines.h
src/enclave/trustzone/ta_dev_kit/host_include/: __tee_ipsocket.h  __tee_isocket_defines.h  __tee_tcpsocket_defines.h  aes_alt.h  arm64_user_sysreg.h  arm_user_sysreg.h  conf.cmake  conf.h  conf.mk  dlfcn.h  elf_common.h  fs_htree.h  link.h  pta_apdu.h  pta_device.h  pta_gprof.h  pta_invoke_tests.h  pta_scmi_client.h  pta_secstor_ta_mgmt.h  rng_pta_client.h  scp03_pta.h  signed_hdr.h  tee_api.h  tee_arith_internal.h  tee_fs_key_manager.h  tee_internal_api_extensions.h  tee_syscall_numbers.h  tee_ta_api.h  tee_tcpsocket.h  tee_udpsocket.h  utee_defines.h  utee_syscalls.h  utee_types.h
src/enclave/trustzone/ta_dev_kit/host_include/mbedtls/: aes.h  bignum.h  bn_mul.h  camellia.h  ccm.h  chacha20.h  chachapoly.h  cipher.h  compat-1.3.h  debug.h  dhm.h  ecdh.h  entropy_poll.h  error.h  gcm.h  hkdf.h  md2.h  md_internal.h  memory_buffer_alloc.h  padlock.h  pk_internal.h  pkcs11.h  platform.h  platform_time.h  platform_util.h  poly1305.h  psa_util.h  rsa.h  rsa_internal.h  sha1.h  sha256.h  ssl.h  ssl_ciphersuites.h  ssl_internal.h  threading.h  x509_csr.h
src/enclave/trustzone/ta_dev_kit/include/: __tee_tcpsocket_defines_extensions.h  __tee_udpsocket_defines.h  assert.h  atomic.h  bitstring.h  compiler.h  config.h  confine_array_index.h  elf32.h  elf64.h  inttypes.h  malloc.h  mbedtls_config_kernel.h  mempool.h  printk.h  pta_benchmark.h  pta_scp03.h  pta_socket.h  pta_system.h  setjmp.h  speculation_barrier.h  stdint.h  stdio.h  stdlib.h  stdlib_ext.h  string.h  string_ext.h  strings.h  tee_api_defines.h  tee_api_defines_extensions.h  tee_api_types.h  tee_isocket.h  trace.h  trace_levels.h  types_ext.h  unistd.h  user_ta_header.h  util.h
src/enclave/trustzone/ta_dev_kit/include/mbedtls/: aesni.h  arc4.h  aria.h  asn1.h  asn1write.h  base64.h  blowfish.h  certs.h  check_config.h  cipher_internal.h  cmac.h  ctr_drbg.h  des.h  ecdsa.h  ecjpake.h  ecp.h  ecp_internal.h  entropy.h  havege.h  hmac_drbg.h  md.h  md4.h  md5.h  net_sockets.h  nist_kw.h  oid.h  pem.h  pk.h  pkcs12.h  pkcs5.h  ripemd160.h  sha512.h  ssl_cache.h  ssl_cookie.h  ssl_ticket.h  timing.h  version.h  x509.h  x509_crl.h  x509_crt.h  (+1 more)
src/enclave/trustzone/ta_dev_kit/include/sys/: cdefs.h  queue.h
src/enclave/trustzone/ta_dev_kit/mk/: conf.mk
src/enclave/trustzone/ta_dev_kit/src/: user_ta_header.c
src/extension/: CMakeLists.txt  enc_float4.cpp  enc_int4.cpp  enc_text.cpp  enc_timestamp.cpp  encdb--0.0.1.sql  encdb.cpp  test
src/extension/include/: enc_int_ops.hpp  enc_text_ops.hpp  enc_timestamp_ops.hpp  interface.hpp  recorder.hpp  replayer.hpp  request.hpp  stdafx.hpp  tee_interface.hpp  timer.hpp
src/extension/interface/: enc_float_ops.cpp  enc_int_ops.cpp  enc_text_ops.cpp  enc_timestamp_ops.cpp  interface.cpp
src/extension/interface/sgx/: sgx_interface.cpp  sgx_interface.hpp
src/extension/interface/simulate/: sim_interface.cpp  sim_interface.hpp
src/extension/interface/trustzone/: tz_interface.c
src/extension/rr/: recorder.cpp  replayer.cpp
src/include/: barrier.h  base64.h  debug.h  defs.h  enc_types.h  ops_server.h  request_types.h  sync.h
src/integrity_zone/: CMakeLists.txt  hedb--1.0.sql  hedb.cpp
src/integrity_zone/include/: enc_float_ops.hpp  enc_int_ops.hpp  enc_text_ops.hpp  enc_timestamp_ops.hpp  extension.hpp  interface.hpp  recorder.hpp  replayer.hpp  request.hpp  rr_utils.hpp  rrprintf.hpp  stdafx.hpp  tee_interface.hpp  timer.hpp
src/integrity_zone/interface/: cvm_interface.cpp  cvm_interface.hpp  interface.cpp
src/integrity_zone/invoke_ops/: enc_float_ops.cpp  enc_int_ops.cpp  enc_text_ops.cpp  enc_timestamp_ops.cpp
src/integrity_zone/ops_client/: enc_float_ops.cpp  enc_int_ops.cpp  enc_text_ops.cpp  enc_timestamp_ops.cpp
src/integrity_zone/record_replay/: recorder.cpp  replayer.cpp  rr_utils.cpp
src/integrity_zone/rr/: recorder.cpp  replayer.cpp  rr_utils.cpp  rrprintf.cpp
src/integrity_zone/udf/: enc_float4.cpp  enc_int4.cpp  enc_text.cpp  enc_timestamp.cpp
src/integrity_zone/udt/: enc_float4.cpp  enc_int4.cpp  enc_text.cpp  enc_timestamp.cpp
src/privacy_zone/: crypto.cpp  crypto.h  desenitizer.cpp  handle_ops.c  handle_ops.cpp  handler.cpp  ops_server.cpp  ops_server.hpp  sched_ops.cpp
src/privacy_zone/enc_ops/: enc_float_ops.c  enc_float_ops.cpp  enc_int_ops.c  enc_int_ops.cpp  enc_text_ops.c  enc_text_ops.cpp  enc_timestamp_ops.cpp
src/privacy_zone/include/: desenitizer.h  enc_float_ops.h  enc_int_ops.h  enc_ops.h  enc_text_ops.h  enc_timestamp_ops.h  like_match.h  plain_float_ops.h  plain_int_ops.h  plain_text_ops.h  plain_timestamp_ops.h
src/privacy_zone/klee_wrapper/: masker.c  prefix_udf.c  prefix_udf.h  wrapper.c
src/privacy_zone/plain_ops/: like_match.c  plain_float_ops.c  plain_int_ops.c  plain_text_ops.c  plain_timestamp_ops.c
src/utils/: base64.c  base64.cpp  debug.c  debug.cpp  sync.c  sync.cpp
(+202 files in other folders)
